[project]
name = "auto-typing-final"
description = "Automagically set typing.Final inside your functions"
authors = [{ name = "Lev Vereshchagin", email = "mail@vrslev.com" }]
dependencies = ["ast-grep-py==0.38.5", "pygls==1.3.1"]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
keywords = ["automation", "flake8", "mypy", "typing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/community-of-python/auto-typing-final"

[project.scripts]
auto-typing-final = "auto_typing_final.main:main"
auto-typing-final-lsp-server = "auto_typing_final.lsp:main"

[dependency-groups]
dev = ["mypy==1.13.0", "pytest==8.3.3", "pytest-cov==5.0.0", "ruff==0.8.0"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"


[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
strict = true

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = ["D1", "D203", "D213", "COM812", "ISC001", "CPY001"]
extend-per-file-ignores = { "tests/*" = ["S101", "SLF001", "ARG"] }

[tool.pytest.ini_options]
addopts = "--cov -s -vv"

[tool.coverage.run]
branch = true

[tool.coverage.report]
skip_covered = true
show_missing = true
